# Recovery-and-Processing-of-Musical-Information

./: README.md  a_wav.py  desde_wav.py  main.tex
MIR/: .gitignore  CMakeLists.txt  auxiliares.cpp  auxiliares.h  datosMáximosTemporales.csv  datoslimpiarAudio.csv  datosrevertirAudio.csv  definiciones.h  expectedAudioTest.txt  main.cpp  readAudioTest.txt  solucion.cpp  solucion.h  writtenAudioTest.txt
MIR/tests/: audiosSoftYHard.cpp  bajarCalidad.cpp  escribirAudioTEST.cpp  formatoValidoTEST.cpp  leerAudioTEST.cpp  limpiarAudioTEST.cpp  magnitudAbsolutaMaximaTest.cpp  maximosTemporales.cpp  redirigirTEST.cpp  reemplazarSubAudio.cpp  replicarTEST.cpp  revertirAudioTEST.cpp
